my first commit

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+/*ITCSS settings, tools, generic, elements, objects, utilities*/
+@import 'styles/settings/_colors.scss';
+@import 'styles/settings/_fonts.scss';
+@import 'styles/tools/_mixins.scss';
+@import 'styles/generic/_normalize.scss';
+@import 'styles/generic/_helpers.scss';
+@import 'styles/elements/_tags.scss';
+
+
+
+
+
